Corrección de finales de línea y actualización de archivos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Consorcio SPYnet</title>
+  <title>SPYnet</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -199,7 +199,7 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-wifi icon"></i></div>
-              <h4><a href="" class="stretched-link">50 mb</a></h4>
+              <h4><a href="" class="stretched-link">50 Mbps</a></h4>
               <p>Este plan ofrece una velocidad de descarga de hasta 50 Mbps y es ideal 
               para hogares pequeños o para personas que realizan actividades en línea básicas.
               Cuenta con una conexión simétrica.</p>
@@ -209,7 +209,7 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-wifi icon"></i></div>
-              <h4><a href="" class="stretched-link">100 mb</a></h4>
+              <h4><a href="" class="stretched-link">100 Mbps</a></h4>
               <p>Este plan proporciona una velocidad de descarga de hasta 100 Mbps y es una opción 
                 equilibrada para familias medianas con un uso moderado a intensivo de internet.
                 Streaming en calidad HD y 4K en varios dispositivos simultáneamente.
@@ -222,7 +222,7 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-wifi icon"></i></div>
-              <h4><a href="" class="stretched-link">150 mb</a></h4>
+              <h4><a href="" class="stretched-link">150 Mbps</a></h4>
               <p>Este plan ofrece una velocidad de hasta 150 Mbps, perfecta para hogares 
                 grandes o familias numerosas con alta demanda de internet.
                 Streaming en calidad 4K/UHD en varios dispositivos al mismo tiempo.
@@ -235,10 +235,11 @@
               <div class="service-item position-relative">
                 <div class="icon"><i class="bi bi-wifi icon"></i></div>
                 <h4><a href="" class="stretched-link">Precios:</a></h4>
-                <p><strong>50 mb:</strong> 130.000 gs.</p>
-                <p><strong>100 mb:</strong> 160.000 gs.</p>
-                <p><strong>150 mb:</strong> 200.000 gs.</p>
+                <p>50 mbps: 130.000 gs.</p>
+                <p>100 mbps:160.000 gs.</p>
+                <p>150 mbps: 200.000 gs.</p>
                 <p> Ofrecemos lo mejor a nuestros clientes.</p>
+                <img src="assets/img/IMG-20250402-WA0010.jpg" alt="Imagen descriptiva" style="width: 100%; margin-top: 15px;">
                 
           </div>
 
@@ -252,7 +253,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Corporativo</h2>
-        <p>Despliegue de fibra óptica para empresas y negocios.</p>
+        <p><strong>Despliegue de fibra óptica para empresas y negocios.</strong></p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -277,7 +278,7 @@
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/IMG-20241119-WA0105.jpg" class="img-fluid" alt="">
+              <img src="assets/img/IMG-20250327-WA0028.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
@@ -362,17 +363,16 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/IMG_20241104_100439.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/IMG-20250116-WA0083.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Yessica Araceli López</h4>
                 <span>Ing. Informática</span>
                 <p>Atención al cliente</p>
                 <p>Valenzuela.</p>
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""> <i class="bi bi-linkedin"></i> </a>
+                  <a href="https://www.facebook.com/share/15xFvNbDUs/"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/yessica_araceli_10?igsh=YWMxdTl0bHRhejM="><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/yessicaaracelilopez10?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> <i class="bi bi-linkedin"></i> </a>
                 </div>
               </div>
             </div>
@@ -382,7 +382,7 @@
             <div class="team-member d-flex align-items-start">
               <div class="pic"><img src="assets/img/team/IMG-20250203-WA0014.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Carlos</h4>
+                <h4>Carlos Balbuena</h4>
                 <span>Atención al cliente.</span>
                 <p>Sapucai.</p>
                 <div class="social">
@@ -398,7 +398,7 @@
               <div class="pic"><img src="assets/img/team/IMG-20250203-WA0075.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Cristhian Alcaraz.</h4>
-                <p>Técnico.</p>
+                <p>Técnico autorizado.</p>
                 <div class="social">
                   
                   <a href="https://www.facebook.com/share/1CvT5Ks8b1/?mibextid=qi2Omg"><i class="bi bi-facebook"></i></a>
@@ -411,16 +411,41 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/IMG-20250212-WA0025.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
-                <p>Dolorum tempora officiis odit laborum officiis et et accusamus</p>
+                <h4>Ramón Matias Arias Ortiz</h4>
+                <p>Técnico autorizado</p>
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""> <i class="bi bi-linkedin"></i> </a>
+                  <a href="https://www.facebook.com/share/1A6SQGjZG2/"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/ramonmatiasariasortiz?utm_source=qr&igsh=ZWF6b2FmcGhm5w"><i class="bi bi-instagram"></i></a>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="team-member d-flex align-items-start">
+              <div class="pic"><img src="assets/img/team/IMG-20250317-WA0048.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Josue Ortiz</h4>
+                <p>Técnico autorizado</p>
+                <div class="social">
+                  <a href="https://www.facebook.com/share/16LzYAA4xb/"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/josue_ortiz98?igsh=cmloZ2R3a282encw"><i class="bi bi-instagram"></i></a>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="team-member d-flex align-items-start">
+              <div class="pic"><img src="assets/img/team/1742728498030.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Richard Leckie</h4>
+                <p>Técnico autorizado</p>
+                <div class="social">
+                  <a href="https://www.facebook.com/share/1AE6xqxNhd/"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/richardleckie69?igsh=MWxseHhhbnh3Zjl1aQ== "><i class="bi bi-instagram"></i></a>
                 </div>
               </div>
             </div>
@@ -449,11 +474,11 @@
       <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
         <div class="testimonio card">
           <div class="pic">
-            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+            <img src="assets/img/testimonials/FB_IMG_1742734226525.jpg" class="testimonial-img" alt="">
           </div>
           <div class="testimonio-info">
-            <h4>Yessica Araceli López</h4>
-            <p>"Gracias a SPYnet, ahora tengo una conexión estable y rápida que me permite trabajar desde casa sin problemas. Su atención al cliente es insuperable."</p>
+            <h4>Ángel Barrios</h4>
+            <p>Tienen buen servicio, es bueno que tengan hasta los domingos, así no se espera mucho tiempo por la asistencia. </p>
           </div>
         </div>
       </div><!-- End Testimonio -->
@@ -461,11 +486,11 @@
       <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
         <div class="testimonio card">
           <div class="pic">
-            <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+            <img src="assets/img/testimonials/IMG-20250401-WA0008.jpg" class="testimonial-img" alt="">
           </div>
           <div class="testimonio-info">
-            <h4>Sarah Jhonson</h4>
-            <p>"Desde que contraté SPYnet, mi negocio ha crecido gracias a una conexión confiable y rápida. ¡Altamente recomendado!"</p>
+            <h4>Nelson Pérez</h4>
+            <p>Vienen rápido cuando se necesita asistencia, recomendado.</p>
           </div>
         </div>
       </div><!-- End Testimonio -->
@@ -473,11 +498,11 @@
       <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
         <div class="testimonio card">
           <div class="pic">
-            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+            <img src="assets/img/testimonials/FB_IMG_1743534727811.jpg" class="testimonial-img" alt="">
           </div>
           <div class="testimonio-info">
-            <h4>William Anderson</h4>
-            <p>"SPYnet me ha brindado el soporte técnico que necesitaba. Ahora puedo disfrutar de streaming sin interrupciones."</p>
+            <h4>Ruth Arzamendia Ocampos</h4>
+            <p>Puedo trabajar a gusto con mi wifi, y buena asistencia.</p>
           </div>
         </div>
       </div><!-- End Testimonio -->
@@ -485,11 +510,11 @@
       <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
         <div class="testimonio card">
           <div class="pic">
-            <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+            <img src="assets/img/testimonials/FB_IMG_1739536159660.jpg" class="testimonial-img" alt="">
           </div>
           <div class="testimonio-info">
-            <h4>Amanda Jepson</h4>
-            <p>"La instalación fue rápida y sencilla. SPYnet ha cambiado completamente mi experiencia de navegación."</p>
+            <h4>Claudia Guillén</h4>
+            <p>Excelente servicio.</p>
           </div>
         </div>
       </div><!-- End Testimonio -->
@@ -508,7 +533,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contacto</h2>
-        <p>Contacta para más información sobre nuestros servicios.</p>
+        <p><strong>Contacta para más información sobre nuestros servicios.</strong></p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -610,10 +635,8 @@
           <h4>Síguenos</h4>
           <p>¡Nos puedes encontrar en facebook e instagram, dale clic y síguenos!</p>
           <div class="social-links d-flex">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100094258637981 "><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/spynet_paraguay?igsh=MnR4NHJncG93YmZo "><i class="bi bi-instagram"></i></a>
           </div>
         </div>
 
