Actualización del archivo index.html

--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <p>Descubre cómo SPYnet puede transformar tu experiencia de conectividad. Únete a nuestra red y sé parte del futuro digital. </p>
-            <a href="#services" class="read-more"><span>Ver más</span><i class="bi bi-arrow-right"></i></a>
+            <img src="assets/img/publi.png" alt="Imagen descriptiva" style="width: 60%; margin-top: 15px;">
+            <a href="#services" class="read-more"><span>Ver más</span><i class="bi bi-arrow-right"></i>
+            </a>
           </div>
 
     <!-- Services Section -->
@@ -189,7 +191,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Servicios</h2>
-        <p><strong>¿Cómo saber elegir el plan adecuado para ti?</strong></p>
+        <p style="text-align: center;">¿Cómo saber elegir el plan adecuado para ti?</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -203,8 +205,10 @@
               <p>Este plan ofrece una velocidad de descarga de hasta 50 Mbps y es ideal 
               para hogares pequeños o para personas que realizan actividades en línea básicas.
               Cuenta con una conexión simétrica.</p>
-            </div>
+              <p><strong>130.000 gs.</strong></p>
+
           </div><!-- End Service Item -->
+        </div>
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
@@ -216,6 +220,7 @@
                 Teletrabajo con videollamadas frecuentes y uso de herramientas en línea.
                 Juegos en línea.
                 Descargas de archivos de tamaño medio (películas, juegos).</p>
+                <p><strong>160.000 gs.</strong></p>
             </div>
           </div><!-- End Service Item -->
 
@@ -229,20 +234,26 @@
                 Descargas rápidas de archivos grandes, como juegos o películas en alta calidad.
                 Teletrabajo intensivo con múltiples videollamadas y transferencias de datos grandes.
                 Juegos en línea con baja latencia, incluso para varios jugadores simultáneos.</p>
+                <p><strong>200.000 gs.</strong></p>
             </div>
           </div>
             <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
               <div class="service-item position-relative">
                 <div class="icon"><i class="bi bi-wifi icon"></i></div>
-                <h4><a href="" class="stretched-link">Precios:</a></h4>
-                <p>50 mbps: 130.000 gs.</p>
-                <p>100 mbps:160.000 gs.</p>
-                <p>150 mbps: 200.000 gs.</p>
-                <p> Ofrecemos lo mejor a nuestros clientes.</p>
-                <img src="assets/img/IMG-20250402-WA0010.jpg" alt="Imagen descriptiva" style="width: 100%; margin-top: 15px;">
+                <img src="assets/img/IMG-20250402-WA0010.jpg" alt="Imagen descriptiva" style="width: 100%; margin-top: 15px;">  
+                
+                <div class="col-lg-7">
+                  <!-- Enlace de WhatsApp -->
+                  <div class="text-center" data-aos="fade-up" data-aos-delay="200">
+                    <p class="pb-3"><strong>¡Es sin contrato!</strong></p>
+                    <a href="https://wa.me/595983399215" class="btn btn-whatsapp">
+                      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" style="width: 30px; margin-right: 10px;">
+                      Enviar mensaje
+                    </a>
+                  </div>
+                </div>
                 
           </div>
-
         </div>
 
       </div>
@@ -277,7 +288,7 @@
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <img src="assets/img/IMG-20250327-WA0028.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
 
@@ -285,7 +296,7 @@
               <img src="assets/img/IMG-20241204-WA0020.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <img src="assets/img/IMG-20241212-WA0017.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
 
@@ -297,7 +308,7 @@
               <img src="assets/img/IMG-20241115-WA0053.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <img src="assets/img/IMG-20241212-WA0052.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
 
@@ -305,13 +316,14 @@
               <img src="assets/img/IMG-20241105-WA0008.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <img src="assets/img/IMG-20241107-WA0123.jpg" class="img-fluid" alt="">
+            </div><!-- End Portfolio Item -->
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <img src="assets/img/IMG-20241203-WA0030.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="assets/img/IMG-20241107-WA0123.jpg" class="img-fluid" alt="">
-            </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <img src="assets/img/IMG_20241217_083100.jpg" class="img-fluid" alt="">
@@ -333,7 +345,7 @@
               <img src="assets/img/IMG-20241204-WA0023.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
 
-           <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+           <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <img src="assets/img/IMG-20241114-WA0007.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
 
@@ -576,7 +588,7 @@
             <!-- Enlace de WhatsApp -->
             <div class="text-center" data-aos="fade-up" data-aos-delay="200">
               <p class="pb-3"><strong>Contáctanos por WhatsApp:</strong></p>
-              <a href="https://wa.link/7clz68" target="_blank" class="btn btn-whatsapp">
+              <a href="https://wa.me/595983399215" class="btn btn-whatsapp">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" style="width: 30px; margin-right: 10px;">
                 Enviar mensaje por WhatsApp
               </a>
@@ -608,7 +620,7 @@
             <p class="mt-3"><h4>Celular:</h4> 
             <span>(0974) 500 519</span></p>
             <span>(0983) 399 215</span></p>
-            <p><h4>Email:</h4> <span>info@example.com</span></p>
+            <p><h4>Email:</h4> <span>consorciospynet@gmail.com</span></p>
           </div>
         </div>
 
