Actualización del index

--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <p>Descubre cómo SPYnet puede transformar tu experiencia de conectividad. Únete a nuestra red y sé parte del futuro digital. </p>
-            <img src="assets/img/publi.png" alt="Imagen descriptiva" style="width: 83%; margin-top: 15px;">
-            <a href="#services" class="read-more"><span>Ver más</span><i class="bi bi-arrow-right"></i>
+            <img src="assets/img/FB_IMG_1733609521821.jpg" alt="Imagen descriptiva" class="imagen-centrada">
+            <a href="#services" class="read-more btn-espaciado alinear-derecha">
+              <span>Ver más</span><i class="bi bi-arrow-right"></i>
             </a>
           </div>
 
@@ -239,7 +240,7 @@
           </div>
             <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
               <div class="service-item position-relative">
-                <div class="icon"><i class="bi bi-wifi icon"></i></div>
+               <!-- <div class="icon"><i class="bi bi-wifi icon"></i></div>-->
                 <img src="assets/img/IMG-20250402-WA0010.jpg" alt="Imagen descriptiva" style="width: 100%; margin-top: 15px;">  
                 
                 <div class="col-lg-7">
@@ -248,7 +249,7 @@
                     <p class="pb-3"><strong>¡Es sin contrato!</strong></p>
                     <a href="https://wa.me/595983399215" class="btn btn-whatsapp">
                       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" style="width: 30px; margin-right: 10px;">
-                      Enviar mensaje
+                      Adquirir plan
                     </a>
                   </div>
                 </div>
