--- a/index.html
+++ b/index.html
@@ -181,9 +181,11 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <p>Descubre cómo SPYnet puede transformar tu experiencia de conectividad. Únete a nuestra red y sé parte del futuro digital. </p>
             <img src="assets/img/FB_IMG_1733609521821.jpg" alt="Imagen descriptiva" class="imagen-centrada">
-            <a href="#services" class="read-more btn-espaciado alinear-derecha">
-              <span>Ver más</span><i class="bi bi-arrow-right"></i>
-            </a>
+            <div style="text-align: right;">
+              <a href="#services" class="read-more btn-espaciado">
+                <span>Ver más</span><i class="bi bi-arrow-right"></i>
+              </a>
+            </div>
           </div>
 
     <!-- Services Section -->
