--- a/index.html
+++ b/index.html
@@ -276,17 +276,15 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">Todo</li>
-            <!-- Lista con íconos de Wi-Fi -->
-              
             <li data-filter=".filter-app">
-            <i class="bi bi-wifi"></i>
-            </li>
-            <li data-filter=".filter-product">
-            <i class="bi bi-wifi"></i>
-            </li>
-            <li data-filter=".filter-branding">
-            <i class="bi bi-wifi"></i>
-            </li>
+              <i class="bi bi-wifi">Fotos 1</i>
+              </li>
+              <li data-filter=".filter-product">
+              <i class="bi bi-wifi">Fotos 2</i>
+              </li>
+              <li data-filter=".filter-branding">
+              <i class="bi bi-wifi">Fotos 3</i>
+              </li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -489,10 +487,10 @@
       <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
         <div class="testimonio card">
           <div class="pic">
-            <img src="assets/img/testimonials/FB_IMG_1742734226525.jpg" class="testimonial-img" alt="">
+            <img src="assets/img/testimonials/FB_IMG_1743789045438.jpg" class="testimonial-img" alt="">
           </div>
           <div class="testimonio-info">
-            <h4>Ángel Barrios</h4>
+            <h4>María Carolina</h4>
             <p>Tienen buen servicio, es bueno que tengan hasta los domingos, así no se espera mucho tiempo por la asistencia. </p>
           </div>
         </div>
