--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
             <img src="assets/img/testimonials/FB_IMG_1743789045438.jpg" class="testimonial-img" alt="">
           </div>
           <div class="testimonio-info">
-            <h4>María Carolina</h4>
+            <h4 style="text-align: center;">María Carolina</h4>
             <p>Tienen buen servicio, es bueno que tengan hasta los domingos, así no se espera mucho tiempo por la asistencia. </p>
           </div>
         </div>
@@ -502,7 +502,7 @@
             <img src="assets/img/testimonials/IMG-20250401-WA0008.jpg" class="testimonial-img" alt="">
           </div>
           <div class="testimonio-info">
-            <h4>Nelson Pérez</h4>
+            <h4 style="text-align: center;">Nelson Pérez</h4>
             <p>Vienen rápido cuando se necesita asistencia, recomendado.</p>
           </div>
         </div>
@@ -514,7 +514,7 @@
             <img src="assets/img/testimonials/FB_IMG_1743534727811.jpg" class="testimonial-img" alt="">
           </div>
           <div class="testimonio-info">
-            <h4>Ruth Arzamendia Ocampos</h4>
+            <h4 style="text-align: center;">Ruth Arzamendia</h4>
             <p>Puedo trabajar a gusto con mi wifi, y buena asistencia.</p>
           </div>
         </div>
@@ -526,7 +526,7 @@
             <img src="assets/img/testimonials/FB_IMG_1739536159660.jpg" class="testimonial-img" alt="">
           </div>
           <div class="testimonio-info">
-            <h4>Claudia Guillén</h4>
+            <h4 style="text-align: center;">Claudia Guillén</h4>
             <p>Excelente servicio.</p>
           </div>
         </div>
