Actualización del archiv

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
               <div class="member-info">
                 <h4>Yessica Araceli López</h4>
                 <span>Ing. Informática</span>
-                <p style="text-align: center;"> Atención al cliente.</p>
+                <p style="text-align: center;"> Help Desk.</p>
                 <p style="text-align: center;"> Valenzuela.</p>
                 <div class="social">
                   <a href="https://www.facebook.com/share/15xFvNbDUs/"><i class="bi bi-facebook"></i></a>
@@ -474,7 +474,8 @@
               <div class="pic"><img src="assets/img/team/IMG-20250203-WA0014.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Carlos Balbuena</h4>
-                <span>Atención al cliente.</span>
+                <span>Lic en contabilidad.</span>
+                <p style="text-align: center;"> Help Desk.</p>
                 <p style="text-align: center;"> Sapucai.</p>
                 <div class="social">
                   <a href="https://www.facebook.com/share/15BEtznCtZ/?mibextid=kFxxJD"><i class="bi bi-facebook"></i></a>
