Actualización del archi

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         .sitename {
             display: flex; /* Coloca los elementos en línea */
             align-items: center; /* Centra verticalmente */
-            gap: 10px; /* Espacio entre el logo y el texto */
+            gap: 5px; /* Espacio entre el logo y el texto */
         }
       
         .logo {
-            width: 60px; /* Ajusta el tamaño del logo */
+            width: 15; /* Ajusta el tamaño del logo */
             height: auto; /* Mantén la proporción del logo */
         }
       </style>
@@ -68,6 +68,7 @@
           <li><a href="#hero" class="active">Inicio</a></li>
           <li><a href="#about">Sobre SPYnet</a></li>
           <li><a href="#services">Servicios y precios</a></li>
+          <li><a href="#parental">Control Parental</a></li>
           <li><a href="#portfolio">Corporativo</a></li>
           <li><a href="#team">Equipo SPYnet</a></li>
           <li><a href="#testimonios">Testimonios</a></li>
@@ -273,6 +274,120 @@
         </div>
 
       </div>
+
+
+<!-- Services Section -->
+<section id="parental" class="services section light-background">
+
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>CONECTATE SEGURO</h2>
+    <strong style="text-align: center;">HERRAMIENTAS SEGURAS PARA PROTEGER A TU FAMILIA EN INTERNET.</strong>
+    <p style="text-align: center;">Te recomendamos las siguientes herramientas gratuitas:</p>
+  </div><!-- End Section Title -->
+
+  <div class="container">
+
+    <div class="row gy-4">
+
+      <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
+        <div class="service-item position-relative text-center">
+          <div class="icon"><i class="bi bi-android icon"></i></div>
+          <h4>Android</h4>
+          <h4>Google Family Link</h4>
+          <p>
+            Family Link funciona con dispositivos Android con la versión 7.0 (Nougat) (15/06/2016), o superior.
+            Es posible que este mismo producto pueda ser utilizado en dispositivos con las versiones de Android 5.0
+            y 6.0 (Lollipop y Marshmallow).
+          </p>
+          <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.kids.familylink" class="btn btn-primary mt-4" target="_blank">
+            Descargar
+          </a>
+          <a href="https://families.google/intl/es-419_ALL/familylink/" class="btn btn-primary mt-4" target="_blank">
+            Ver tutorial de uso
+          </a>
+        </div>
+      </div>
+
+      <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
+        <div class="service-item position-relative text-center">
+          <div class="icon">
+            <i class="bi bi-windows icon" style="font-size: 2rem;"></i>
+          </div>
+          <h4>Windows</h4>
+          <h4>Windows Family Options</h4>
+          <p>
+            Desde la versión 10. Aplica solamente para cuentas de Microsoft Edge. 
+            Incluye la Administración de dispositivos iOS y Android vinculados a tu cuenta de Microsoft.
+          </p>
+          <a href="https://support.microsoft.com/es-es/windows/opciones-de-familia-en-la-aplicaci%C3%B3n-seguridad-de-windows-5e8b9fd8-8372-dba0-eba2-46da8e407026" class="btn btn-primary mt-4" target="_blank">
+            Ver tutorial de uso
+          </a>
+        </div>
+      </div>
+
+
+      <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
+        <div class="service-item position-relative text-center">
+          <div class="icon">
+            <i class="bi bi-apple icon" style="font-size: 2rem;"></i>
+          </div>
+          <h4>iOS</h4>
+          <h4>Contenido y privacidad de tiempo de uso</h4>
+          <p>
+            Desde la versión 13.4 (24/03/2020) y adelante.Equipos: iPhone 6s y posteriores,
+            iPad Air 2 y posteriores, iPad mini 4 y posteriores, y iPod touch (séptima generación)
+          </p>
+          <a href="https://support.apple.com/es-es/105121" class="btn btn-primary mt-4" target="_blank">
+            Ver tutorial de uso
+          </a>
+        </div>
+      </div>
+
+
+      <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
+        <div class="service-item position-relative text-center">
+          <div class="icon">
+            <i class="bi bi-laptop icon" style="font-size: 2rem;"></i>
+          </div>
+          <h4>macOS</h4>
+          <h4>Contenido y privacidad de tiempo de uso</h4>
+          <p>
+            Desde la versión Catalina 10.15 (07/10/2019).Las mismas de iOS dado que las configuraciones están asociadas 
+            a la cuenta iCloud y no exclusivamente al dispositivo en sí.
+          </p>
+          <a href="https://support.apple.com/es-es/105121" class="btn btn-primary mt-4" target="_blank">
+            Ver tutorial de uso
+          </a>
+        </div>
+      </div>
+            
+      </div>
+    </div>
+
+  </div>
+
+
+<!-- Services Section -->
+<section id="services" class="services section light-background">
+
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>CONTROLES PARENTALES</h2>
+    <p style="margin-top: 20px; text-align: justify;">
+    La Ley N° 5653 de Protección de niños, niñas y adolescentes contra contenidos nocivos de internet, de fecha 24 de agosto de 2016, establece en su Art. N° 1, que tiene por objeto la protección integral de niños, niñas y adolescentes a los efectos que puedan generar en ellos contenidos nocivos a que se accedan o se encuentren en Internet. 
+    Así mismo, el Decreto N° 8098-2022, de fecha 27 de octubre de 2022, reglamenta la Ley N° 5653-2016 de protección de niños, niñas y adolescentes contra contenidos nocivos de internet. 
+    </p>
+    <p style="margin-top: 20px;">
+      Otros recursos sobre cómo configurar de manera segura y proteger los dispositivos de sus hijos:
+    </p>
+  <a href="https://www.internetmatters.org/parental-controls/" class="btn btn-primary mt-4" target="_blank">
+    Parental Controls
+  </a>
+  </div><!-- End Section Title -->
+</div>
+
+
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section">
