--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
 
     <!-- Contenedor para las dos imágenes una al lado de la otra -->
     <div style="display: flex; gap: 10px; flex: 1; max-width: 40%;">
-      <img src="assets/img/fot4.jpg" alt="Educación Digital" style="width: 100%; height: auto; border-radius: 10px;">
+      <!--<img src="assets/img/fot4.jpg" alt="Educación Digital" style="width: 100%; height: auto; border-radius: 10px;">-->
     </div>
 
     <!-- Texto -->
