--- a/index.html
+++ b/index.html
@@ -685,10 +685,24 @@
   <div class="col-lg-12 col-md-12 portfolio-item isotope-item filter-app">
   <div style="display: flex; align-items: flex-start; gap: 20px; flex-wrap: wrap;">
 
-    <!-- Contenedor para las dos imágenes una al lado de la otra -->
-    <div style="display: flex; gap: 10px; flex: 1; max-width: 40%;">
-      <img src="assets/img/fot4.jpg" alt="Educación Digital" style="width: 100%; height: auto; border-radius: 10px;">
-    </div>
+   <style>
+  .imagen-responsive {
+    width: 40%;      /* Ocupa 40% ancho en desktop */
+    max-width: 100%; /* No se pasa del 100% del contenedor */
+    height: auto;
+    border-radius: 10px;
+    display: block;
+    margin: 0 auto;  /* Centrar en celular */
+  }
+
+  @media (max-width: 768px) {
+    .imagen-responsive {
+      width: 90%;    /* En celular ocupa casi todo el ancho */
+    }
+  }
+</style>
+
+<img src="assets/img/fot4.jpg" alt="Educación Digital" class="imagen-responsive" />
 
     <!-- Texto -->
     <div style="flex: 2; min-width: 300px;">
